--- a/index.html
+++ b/index.html
@@ -186,12 +186,40 @@
       </section>
 
       <div class="divider-2"></div>
+
     <!----CONTACT------->
+      <section class="section" id="contact">
+        <div class="container grid">
+
+
+          <div class="text">
+            <h2 class='title'>Entrem em contato com a gente!</h2>
+            <p>Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir suas críticas e sugestões.</p>
+            <a href="https://api.whatsapp.com/send?phone=+5511 99845-6754&text=Oi! Gostaria de agendar um horário" 
+            class="button" 
+            target="_blank"><i class="icon-whatsapp"></i>Entrar em contato</a>
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i>11 99845-6754</li>
+              <li><i class="icon-map-pin"></i>R. Amauri Souza, 346</li>
+              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+            </ul>
+          </div>
+
+        </div>
+      </section>
+
+
     </main>
 
     <!--SWIPER----->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+    <!--SCROLLREAVEAL-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    
     <!--main.js-->
     <script src="main.js"></script>
   </body>
