--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
             </p>
-            <a class="button" href="#">Agendar um horário</a>
+            <a class="button" href="https://api.whatsapp.com/send?phone=+5511 99845-6754&text=Oi! Gostaria de agendar um horário" target="_blank">Agendar um horário</a>
           </div>
         </div>
       </section>
@@ -105,7 +105,7 @@
             <h2 class='title'>
               Serviços
             </h2>
-            <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+            <p class='subtitle'>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
           </header>
         <div class="cards grid">
           <div class="card">
@@ -224,7 +224,7 @@
         <p>Todos os direitos reservados.</p>
         </div>
 
-        <div class="social">
+        <div class="social grid">
           <a href="https://instagram.com" target="_blank"><i class="icon-instagram"></i></a>
           <a href="https://facebook.com" target="_blank"><i class="icon-facebook"></i></a>
           <a href="https://youtube.com" target="_blank"><i class="icon-youtube"></i></a>
